Code cleanup
Fixes #16